--- a/signup.html
+++ b/signup.html
@@ -55,6 +55,28 @@
         </form>
     </div>
 </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4"></div>
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+            <form action="" method="post">
+                <div class="form-group">
+                    <label for="">Username</label>
+                    <input type="text" name="username" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">Email</label>
+                    <input type="text" name="email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">Password</label>
+                    <input type="text" name="password" class="form-control">
+                </div>
+                <button class="btn btn-info">Signup</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 
 
